--- a/KinectToMidi/KinectToMidi.csproj
+++ b/KinectToMidi/KinectToMidi.csproj
@@ -293,6 +293,11 @@
       <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+    <BootstrapperPackage Include="Kinect.Runtime.1.8">
+      <Visible>False</Visible>
+      <ProductName>Kinect Runtime v1.8</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
       <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
