--- a/KinectToMidi.Models.Tests/KinectToMidi.Models.Tests.csproj
+++ b/KinectToMidi.Models.Tests/KinectToMidi.Models.Tests.csproj
@@ -39,6 +39,9 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\Dlls\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,8 +53,10 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="ConditionsBlockTests.cs" />
     <Compile Include="CuboidConditionTests.cs" />
     <Compile Include="ExpressionEvaluatorTests.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelatedSphereConditionTests.cs" />
   </ItemGroup>
